[package]
edition = "2021"
name = "easy-server"
repository = "https://github.com/Nonprofessional/easy-server"
version = "0.2.0"

[dependencies]
askama = {version = "0.10"}
axum = {version = "0.5", features = ["multipart"]}
clap = {version = "3", features = ["derive"]}
hyper = "0.14"
percent-encoding = "2"
tokio = {version = "1", features = ["full"]}
tower-http = {version = "0.2", features = ["fs", "add-extension"]}

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
